# odsbox-pilot

./: .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPER.md  LICENSE  README.md  USER.md  build_static.js  package-lock.json  package.json  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
src/ods_pilot/: __main__.py  app.py  models.py
src/ods_pilot/connection/: connect_dialog.py  manager.py  server_list_dialog.py
src/ods_pilot/query/: editor_panel.py  history.py  main_frame.py  result_grid.py
src/ods_pilot/static/codemirror/: bundle.js
src/odsbox_pilot/: __init__.py  __main__.py  app.py  models.py  splash.py  styles.py
src/odsbox_pilot/ai/: __init__.py  date_parser.py  llm_pipeline.py  model_manager.py  nl_to_conditions.py
src/odsbox_pilot/browse/: __init__.py  _helpers.py  browse_panel.py  condition_dialog.py  filter_tree.py
src/odsbox_pilot/connection/: atfx_factory.py  connect_dialog.py  manager.py  server_list_dialog.py
src/odsbox_pilot/model/: __init__.py  helpers.py  model_panel.py  search_index.py
src/odsbox_pilot/query/: ai_preview_dialog.py  ai_settings_dialog.py  context_variables_dialog.py  editor_panel.py  examples.py  history.py  main_frame.py  result_grid.py  script_starter_generator.py  script_starter_logic.py  settings_dialog.py
src/odsbox_pilot/static/: editor.html
src/odsbox_pilot/static/codemirror/: bundle.js
tests/: conftest.py
tests/data/openatfx/asam600/: Example_Simple.atfx
tests/integration/: test_browse_filter_tree.py  test_context_variables.py  test_nl_query_pipeline.py  test_query.py  test_search_index_semantic.py
tests/unit/: test_app.py  test_atfx_factory.py  test_browse_conditions.py  test_connect_dialog.py  test_date_parser.py  test_examples.py  test_filter_tree.py  test_history.py  test_main_frame_starter.py  test_manager.py  test_model_manager.py  test_model_panel.py  test_models.py  test_nl_to_conditions.py  test_script_starter_generator.py  test_search_index.py  test_styles.py
