[project]
name = "odsbox-pilot"
version = "1.1.0"
description = "ASAM ODS desktop query tool powered by odsbox"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.14"
authors = [
    { name = "Andreas K", email = "totonga@gmail.com" },
]
keywords = ["ASAM", "ODS", "measurement data", "query", "desktop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Database :: Front-Ends",
]
dependencies = [
    "keyring>=25.7.0",
    "odsbox[oidc]>=1.2.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
gui = ["wxpython>=4.2.5"]

[project.urls]
Homepage = "https://github.com/totonga/odsbox-pilot"
Repository = "https://github.com/totonga/odsbox-pilot"
Issues = "https://github.com/totonga/odsbox-pilot/issues"
Changelog = "https://github.com/totonga/odsbox-pilot/releases"

[project.scripts]
odsbox-pilot = "odsbox_pilot.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pip-audit>=2.9.0",
    "pytest>=9.0.3",
    "pytest-mock>=3.14.0",
    "python-semantic-release>=9.0.0",
    "ruff>=0.15.12",
]

[build-system]
requires = ["uv_build>=0.6,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests that require a live ASAM ODS server",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
# wxPython has no type stubs; disable strict checking for all GUI modules
module = [
    "odsbox_pilot.app",
    "odsbox_pilot.__main__",
    "odsbox_pilot.query.editor_panel",
    "odsbox_pilot.query.main_frame",
    "odsbox_pilot.query.result_grid",
    "odsbox_pilot.connection.connect_dialog",
    "odsbox_pilot.connection.server_list_dialog",
]
ignore_errors = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/odsbox_pilot/__init__.py:__version__"]
tag_format = "v{version}"
build_command = "uv build"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = ["^Merge", "^chore"]
