[project]
name = "odsbox-pilot"
version = "1.14.1"
description = "ASAM ODS desktop query tool powered by odsbox"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.14"
authors = [
    { name = "Andreas K", email = "totonga@gmail.com" },
]
keywords = ["ASAM", "ODS", "measurement data", "query", "desktop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Database :: Front-Ends",
]
dependencies = [
    "keyring>=25.7.0",
    "odsbox[oidc]>=1.6.0",
    "pandas>=2.0.0",
    "wodson>=1.1.1",
]

[project.optional-dependencies]
gui = ["wxpython>=4.2.5", "matplotlib>=3.7"]
ai = [
    "huggingface-hub>=0.20.0",
    "openvino-genai>=2024.5.0",
    "sentence-transformers>=3.0",
]
# npu = ["torch-directml>=0.2"]  # Windows Copilot+ NPU/GPU — no Python 3.14 wheels yet;
#   install manually: pip install torch-directml --pre

[project.urls]
Homepage = "https://github.com/totonga/odsbox-pilot"
Repository = "https://github.com/totonga/odsbox-pilot"
Issues = "https://github.com/totonga/odsbox-pilot/issues"
Changelog = "https://github.com/totonga/odsbox-pilot/releases"

[project.scripts]
odsbox-pilot = "odsbox_pilot.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pip-audit>=2.9.0",
    "pytest>=9.0.3",
    "pytest-mock>=3.14.0",
    "python-semantic-release>=9.0.0",
    "ruff>=0.15.12",
    "types-requests>=2.33.0.20260518",
]

[tool.uv]
# Minimum versions that resolve known CVEs in transitive dependencies.
# CVE-2026-3219 / PYSEC-2026-196 affects pip itself (no fix released yet); ignore both
# aliases so pip-audit is run with --ignore-vuln CVE-2026-3219 --ignore-vuln PYSEC-2026-196.
constraint-dependencies = [
    "click>=8.3.3",          # PYSEC-2026-2132
    "cryptography>=48.0.1", # GHSA-537c-gmf6-5ccf
    "gitpython>=3.1.51",    # CVE-2026-44244, GHSA-mv93-w799-cj2w, GHSA-2f96-g7mh-g2hx, GHSA-v396-v7q4-x2qj, GHSA-956x-8gvw-wg5v
    "idna>=3.15",            # CVE-2026-45409
    "msgpack>=1.2.1",       # GHSA-6v7p-g79w-8964
    "pip>=26.1",             # CVE-2026-6357
    "urllib3>=2.7.0",        # PYSEC-2026-141, PYSEC-2026-142
]

[build-system]
requires = ["uv_build>=0.6,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests that require a live ASAM ODS server",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
exclude = ["temp/"]

[[tool.mypy.overrides]]
# wxPython has no type stubs; disable strict checking for all GUI modules
module = [
    "odsbox_pilot.app",
    "odsbox_pilot.__main__",
    "odsbox_pilot.model.model_panel",
    "odsbox_pilot.query.editor_panel",
    "odsbox_pilot.query.main_frame",
    "odsbox_pilot.query.result_grid",
    "odsbox_pilot.query.ai_preview_dialog",
    "odsbox_pilot.query.ai_settings_dialog",
    "odsbox_pilot.query.settings_dialog",
    "odsbox_pilot.query.context_variables_dialog",
    "odsbox_pilot.connection.connect_dialog",
    "odsbox_pilot.connection.server_list_dialog",
    "odsbox_pilot.browse.browse_panel",
    "odsbox_pilot.browse.condition_dialog",
]
ignore_errors = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/odsbox_pilot/__init__.py:__version__"]
tag_format = "v{version}"
build_command = "uv build"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = ["^Merge", "^chore", "^docs", "^test", "^refactor", "^style", "^ci"]
